# audioeqinfer

./: .gitignore  pyproject.toml  setup.py
examples/: EQ_finder.ipynb
src/audioeqinfer/: __init__.py  densityrepr.py  finder.py  parameterfunction.py  utils.py
